colocando container a los contenidos

--- a/index.html
+++ b/index.html
@@ -75,34 +75,36 @@
     <main>
         <!-- Sección de presentación -->
         <section>
-            <div class="presentacion contenedor mb-4">
-                <!-- Texto de presentación e iconos de redes sociales-->
-                <div class="presentacionInfo stretchRight">
-                    <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Desarrollador Front-end React</h1>
-                    <p class="presentacionInfoPrincipal lead">Actualmente me encuentro estudiando tecnologías de backend con Node.js, para ser un desarrollador full stack. A la vez, formo parte del programa ONE, de Oracle + Alura Latam donde me estoy especializando y estudiando cada vez más para ser un mejor desarrollador</p>
-                    <div class="cajaIconosPresentacion">
-                        <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
-                            <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion trans
-                            trans">
-                            <p class="nombreIcono lead">LinkedIn</p>
-                        </a>
-                        <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-3 text-decoration-none">
-                            <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
-                            trans">
-                            <p class="nombreIcono lead">GitHub</p>
-                        </a>
-                        <a href="#" target="_blank" class="m-3 text-decoration-none">
-                            <img src="img/download-pdf.png" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
-                            trans">
-                            <p class="nombreIcono lead">Mi CV</p>
-                        </a>
+            <div class="container">
+                <div class="presentacion mb-4">
+                    <!-- Texto de presentación e iconos de redes sociales-->
+                    <div class="presentacionInfo stretchRight">
+                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Desarrollador Front-end React</h1>
+                        <p class="presentacionInfoPrincipal lead">Actualmente me encuentro estudiando tecnologías de backend con Node.js, para ser un desarrollador full stack. A la vez, formo parte del programa ONE, de Oracle + Alura Latam donde me estoy especializando y estudiando cada vez más para ser un mejor desarrollador</p>
+                        <div class="cajaIconosPresentacion">
+                            <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
+                                <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion trans
+                                trans">
+                                <p class="nombreIcono lead">LinkedIn</p>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-3 text-decoration-none">
+                                <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
+                                trans">
+                                <p class="nombreIcono lead">GitHub</p>
+                            </a>
+                            <a href="#" target="_blank" class="m-3 text-decoration-none">
+                                <img src="img/download-pdf.png" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
+                                trans">
+                                <p class="nombreIcono lead">Mi CV</p>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <!-- foto de perfil y presentación destacada debajo-->
-                <div class="foto text-center mb-2 fadeIn">
-                    <img src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
-                    <p class="nombre">Nahuel Lopez</p>
-                    <p class="nombre">Front-end Developer</p>
+                    <!-- foto de perfil y presentación destacada debajo-->
+                    <div class="foto text-center mb-2 fadeIn">
+                        <img src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
+                        <p class="nombre">Nahuel Lopez</p>
+                        <p class="nombre">Front-end Developer</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -111,8 +113,8 @@
         <!-- Sección acerca de mí -->
         <section>
             <h2 id="about" class="titulo fs-1 mt-4">Sobre mí</h2>
-            <div class="contenedor sobreMi">
-                <div class="sobreMiTexto">
+            <div class="container sobreMi">
+                <div>
                     <p class="resumen">¡Hola mundo! Mi nombre es Nahuel, tengo 33 años, soy de Buenos Aires (Argentina), y además de ser un Desarrollador Front-end React soy profesor de matemática desde hace años. En este momento, tengo mi tiempo dividido entre la programación y mi profesión docente en escuelas. Pero, me sigo perfeccionando y estudiando desarrollo web full stack, con tecnologías de backend con node.js, para cambiar de carrera y dedicarme de lleno a programar.</p>
                     <p class="resumen">Encontré en la programación web, una ventana a muchas cosas que me fascinan, como trabajar en equipo y resolver retos que ponen a prueba mi ingenio y creatividad. Por eso, ahora busco ser parte de una empresa en la cual pueda volcar todo mi conocimiento y me permita seguir formándome para ser cada día un mejor programador.</p>
                     <p class="resumen">Además, estoy en el programa ONE, de Oracle + Alura LATAM, donde estoy estudiando, practicando y me sigo especializando para seguir creciendo en esta profesión. Estoy ansioso por formar parte de una empresa y tener mi trabajo enteramente como desarrollador.</p>
@@ -141,7 +143,7 @@
         <!-- Sección de skills (habilidades técnicas y blandas)-->
         <section>
             <h2 id="skills" class="titulo fs-1 mt-4">Skills</h2>
-            <div>
+            <div class="container">
                 <h3 class="habilidades fs-4 m-4 mt-5">Technical skills:</h3>
                 <div class="cajaSkills mb-5">
                     <div>
@@ -274,12 +276,8 @@
         <!-- Sección de formación -->
         <section>
             <h2 id="formacion" class="titulo fs-1">Formación</h2>
-            <div class="contenedor sobreMi">
-                <div class="sobreMiTexto">
-                    <p class="resumen mt-4 mb-4">Esta es mi formación profesional principal. Sin embargo, cuento con otras certificaciones y estudios que acompañan mis conocimientos en tecnología, como cursos en udemy, entre otros, que siempre me sirven para profundizar en tecnología y complementar las formaciones.</p>
-                </div>
-            </div>
             <div class="container">
+                <p class="resumen mt-4 mb-4">Esta es mi formación profesional principal. Sin embargo, cuento con otras certificaciones y estudios que acompañan mis conocimientos en tecnología, como cursos en udemy, entre otros, que siempre me sirven para profundizar en tecnología y complementar las formaciones.</p>
                 <div class="proyectos">
                     <!-- Profesorado de matemática -->
                     <article id="proyectoCoderhouse" class="proyecto trans">
