corrigiendo tamaños en la presentación y agregando otra img como icono para Js

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <p class="nombreIcono lead">SASS</p>
                     </div>    
                     <div>
-                        <img src="img/javascript.svg" class="iconoSkill" alt="logo de JavaScript">
+                        <img src="img/img-js.jpeg" class="iconoSkill" alt="logo de JavaScript">
                         <p class="nombreIcono lead">JavaScript</p>
                     </div>    
                     <div>
