--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <a class="nav-link m-2 hoverMenu" href="#">Home</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link m-2 hoverMenu" href="#about">Sobre mí</a>
+                            <a class="nav-link m-2 hoverMenu" href="#sobre">Sobre mí</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link m-2 hoverMenu" href="#skills">Skills</a>
@@ -83,24 +83,21 @@
                         <p class="presentacionInfoPrincipal lead">Actualmente me encuentro estudiando tecnologías de backend con Node.js, para ser un desarrollador full stack. A la vez, formo parte del programa ONE, de Oracle + Alura Latam donde me estoy especializando y estudiando cada vez más para ser un mejor desarrollador</p>
                         <div class="cajaIconosPresentacion">
                             <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
-                                <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion trans
-                                trans">
+                                <img src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion">
                                 <p class="nombreIcono lead">LinkedIn</p>
                             </a>
                             <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-3 text-decoration-none">
-                                <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
-                                trans">
+                                <img src="./img/github.svg" alt="Imagen del icono de GitHub" class="iconoPresentacion">
                                 <p class="nombreIcono lead">GitHub</p>
                             </a>
                             <a href="#" target="_blank" class="m-3 text-decoration-none">
-                                <img src="img/download-pdf.png" alt="Imagen del icono de GitHub" class="iconoPresentacion trans
-                                trans">
+                                <img src="img/download-pdf.png" alt="Imagen del icono de GitHub" class="iconoPresentacion">
                                 <p class="nombreIcono lead">Mi CV</p>
                             </a>
                         </div>
                     </div>
                     <!-- foto de perfil y presentación destacada debajo-->
-                    <div class="foto text-center mb-2 fadeIn">
+                    <div class="foto text-center mb-2">
                         <img src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
                         <p class="nombre">Nahuel Lopez</p>
                         <p class="nombre">Front-end Developer</p>
@@ -112,29 +109,27 @@
 
         <!-- Sección acerca de mí -->
         <section>
-            <h2 id="about" class="titulo fs-1 mt-4">Sobre mí</h2>
+            <h2 id="sobre" class="titulo fs-1 mt-4">Sobre mí</h2>
             <div class="container sobreMi">
-                <div>
-                    <p class="resumen">¡Hola mundo! Mi nombre es Nahuel, tengo 33 años, soy de Buenos Aires (Argentina), y además de ser un Desarrollador Front-end React soy profesor de matemática desde hace años. En este momento, tengo mi tiempo dividido entre la programación y mi profesión docente en escuelas. Pero, me sigo perfeccionando y estudiando desarrollo web full stack, con tecnologías de backend con node.js, para cambiar de carrera y dedicarme de lleno a programar.</p>
-                    <p class="resumen">Encontré en la programación web, una ventana a muchas cosas que me fascinan, como trabajar en equipo y resolver retos que ponen a prueba mi ingenio y creatividad. Por eso, ahora busco ser parte de una empresa en la cual pueda volcar todo mi conocimiento y me permita seguir formándome para ser cada día un mejor programador.</p>
-                    <p class="resumen">Además, estoy en el programa ONE, de Oracle + Alura LATAM, donde estoy estudiando, practicando y me sigo especializando para seguir creciendo en esta profesión. Estoy ansioso por formar parte de una empresa y tener mi trabajo enteramente como desarrollador.</p>
-                    <h3 class="habilidades">Hobbies:</h3>
-                    <div class="cajaHobbie">
-                        <img src="img/books.png" class="iconoHobbie" alt="libros">
-                        <p class="resumen">Cuando tengo tiempo para algo más que trabajar y estudiar, mi hobbie también es estudiar, porque disfruto de aprender. Me gusta leer sobre ciencias exactas, matemática, física, química, biología, y sobre desarrollo personal, como libros de liderazgo y otros que apunten a potenciar las habilidades blandas y la inteligencia emocional.</p>
-                    </div>
-                    <div class="cajaHobbie">
-                        <img src="img/dog.png" class="iconoHobbie" alt="perro">
-                        <p class="resumen">Además, en mis tiempos libres le dedico tiempo a mi perro Tilo, y juego con él, que me acompaña siempre que estoy sentando trabajando con la notebook. Es mi fiel compañero todo el tiempo.</p>
-                    </div>
-                    <div class="cajaHobbie">
-                        <img src="img/movie.png" class="iconoHobbie" alt="película en una TV">
-                        <p class="resumen">Me gusta el cine y mirar películas en casa, sobre todo los días de lluvia y frío donde se siente el olor a la tierra mojada, y las gotitas de agua golpean la ventana. Una buena taza de chocolate caliente, con algo dulce como un chocolate, siempre hacen la combinación perfecta para ese momento ¡Me encanta!</p>
-                    </div>
-                    <div class="cajaHobbie">
-                        <img src="img/pesa.png" class="iconoHobbie" alt="pesa de entrenamiento">
-                        <p class="resumen">Me gusta entrenar, sobre todo los entrenamientos de fuerza, pero también me gusta salir a correr, porque me despeja.</p>
-                    </div>
+                <p class="resumen">¡Hola mundo! Mi nombre es Nahuel, tengo 33 años, soy de Buenos Aires (Argentina), y además de ser un Desarrollador Front-end React soy profesor de matemática desde hace años. En este momento, tengo mi tiempo dividido entre la programación y mi profesión docente en escuelas. Pero, me sigo perfeccionando y estudiando desarrollo web full stack, con tecnologías de backend con node.js, para cambiar de carrera y dedicarme de lleno a programar.</p>
+                <p class="resumen">Encontré en la programación web, una ventana a muchas cosas que me fascinan, como trabajar en equipo y resolver retos que ponen a prueba mi ingenio y creatividad. Por eso, ahora busco ser parte de una empresa en la cual pueda volcar todo mi conocimiento y me permita seguir formándome para ser cada día un mejor programador.</p>
+                <p class="resumen">Además, estoy en el programa ONE, de Oracle + Alura LATAM, donde estoy estudiando, practicando y me sigo especializando para seguir creciendo en esta profesión. Estoy ansioso por formar parte de una empresa y tener mi trabajo enteramente como desarrollador.</p>
+                <h3 class="habilidades">Hobbies:</h3>
+                <div class="cajaHobbie">
+                    <img src="img/books.png" class="iconoHobbie" alt="libros">
+                    <p class="resumen">Cuando tengo tiempo para algo más que trabajar y estudiar, mi hobbie también es estudiar, porque disfruto de aprender. Me gusta leer sobre ciencias exactas, matemática, física, química, biología, y sobre desarrollo personal, como libros de liderazgo y otros que apunten a potenciar las habilidades blandas y la inteligencia emocional.</p>
+                </div>
+                <div class="cajaHobbie">
+                    <img src="img/dog.png" class="iconoHobbie" alt="perro">
+                    <p class="resumen">Además, en mis tiempos libres le dedico tiempo a mi perro Tilo, y juego con él, que me acompaña siempre que estoy sentando trabajando con la notebook. Es mi fiel compañero todo el tiempo.</p>
+                </div>
+                <div class="cajaHobbie">
+                    <img src="img/movie.png" class="iconoHobbie" alt="película en una TV">
+                    <p class="resumen">Me gusta el cine y mirar películas en casa, sobre todo los días de lluvia y frío donde se siente el olor a la tierra mojada, y las gotitas de agua golpean la ventana. Una buena taza de chocolate caliente, con algo dulce como un chocolate, siempre hacen la combinación perfecta para ese momento ¡Me encanta!</p>
+                </div>
+                <div class="cajaHobbie">
+                    <img src="img/pesa.png" class="iconoHobbie" alt="pesa de entrenamiento">
+                    <p class="resumen">Me gusta entrenar, sobre todo los entrenamientos de fuerza, pero también me gusta salir a correr, porque me despeja.</p>
                 </div>
             </div>
         </section>
