proyecto terminado y responsive, pendiente visualización del cv y función de emails del form

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <p class="resumen">¡Hola mundo! Mi nombre es Nahuel, tengo 33 años, soy de Buenos Aires (Argentina), y además de ser un Desarrollador Front-end React soy profesor de matemática desde hace años. En este momento, tengo mi tiempo dividido entre la programación y mi profesión docente en escuelas. Pero, me sigo perfeccionando y estudiando desarrollo web full stack, con tecnologías de backend con node.js, para cambiar de carrera y dedicarme de lleno a programar.</p>
                 <p class="resumen">Encontré en la programación web, una ventana a muchas cosas que me fascinan, como trabajar en equipo y resolver retos que ponen a prueba mi ingenio y creatividad. Por eso, ahora busco ser parte de una empresa en la cual pueda volcar todo mi conocimiento y me permita seguir formándome para ser cada día un mejor programador.</p>
                 <p class="resumen">Además, estoy en el programa ONE, de Oracle + Alura LATAM, donde estoy estudiando, practicando y me sigo especializando para seguir creciendo en esta profesión. Estoy ansioso por formar parte de una empresa y tener mi trabajo enteramente como desarrollador.</p>
-                <h3 class="habilidades">Hobbies:</h3>
+                <h3 class="subtitulo">Hobbies:</h3>
                 <div class="cajaHobbie">
                     <img src="img/books.png" class="iconoHobbie" alt="libros">
                     <p class="resumen">Cuando tengo tiempo para algo más que trabajar y estudiar, mi hobbie también es estudiar, porque disfruto de aprender. Me gusta leer sobre ciencias exactas, matemática, física, química, biología, y sobre desarrollo personal, como libros de liderazgo y otros que apunten a potenciar las habilidades blandas y la inteligencia emocional.</p>
@@ -139,7 +139,7 @@
         <section>
             <h2 id="skills" class="titulo fs-1 mt-4">Skills</h2>
             <div class="container">
-                <h3 class="habilidades fs-4 m-4 mt-5">Technical skills:</h3>
+                <h3 class="subtitulo">Technical skills:</h3>
                 <div class="cajaSkills mb-5">
                     <div>
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
@@ -197,7 +197,7 @@
                         <p class="nombreIcono lead">MySQL y MongoDB</p>
                     </div>     -->
                 </div>    
-                <h3 class="habilidades fs-4 m-4">Soft skills:</h3>
+                <h3 class="subtitulo">Soft skills:</h3>
                 <div class="cajaSkills mb-5">
                     <div class="m-2">
                         <img src="img/resiliencia.png" class="iconoSkill" alt="resiliencia, mente positiva">
