reduciendo el texto en hobbies

--- a/index.html
+++ b/index.html
@@ -117,19 +117,19 @@
                 <h3 class="subtitulo">Hobbies:</h3>
                 <div class="cajaHobbie">
                     <img src="img/books.png" class="iconoHobbie" alt="libros">
-                    <p class="resumen">Cuando tengo tiempo para algo más que trabajar y estudiar, mi hobbie también es estudiar, porque disfruto de aprender. Me gusta leer sobre ciencias exactas, matemática, física, química, biología, y sobre desarrollo personal, como libros de liderazgo y otros que apunten a potenciar las habilidades blandas y la inteligencia emocional.</p>
+                    <p class="resumen">Estudiar, porque disfruto de aprender. Me gusta leer sobre ciencias exactas, matemática, física, química, biología, y sobre desarrollo personal, como libros de liderazgo y otros que apunten a potenciar las habilidades blandas y la inteligencia emocional.</p>
                 </div>
                 <div class="cajaHobbie">
                     <img src="img/dog.png" class="iconoHobbie" alt="perro">
-                    <p class="resumen">Además, en mis tiempos libres le dedico tiempo a mi perro Tilo, y juego con él, que me acompaña siempre que estoy sentando trabajando con la notebook. Es mi fiel compañero todo el tiempo.</p>
+                    <p class="resumen">Jugar con mi perro Tilo, que me acompaña siempre que estoy sentando trabajando con la notebook. Es mi fiel compañero todo el tiempo.</p>
                 </div>
                 <div class="cajaHobbie">
                     <img src="img/movie.png" class="iconoHobbie" alt="película en una TV">
-                    <p class="resumen">Me gusta el cine y mirar películas en casa, sobre todo los días de lluvia y frío donde se siente el olor a la tierra mojada, y las gotitas de agua golpean la ventana. Una buena taza de chocolate caliente, con algo dulce como un chocolate, siempre hacen la combinación perfecta para ese momento ¡Me encanta!</p>
+                    <p class="resumen">Cine, series y películas en casa, sobre todo los días de lluvia y frío donde se siente el olor a la tierra mojada, y las gotitas de agua golpean la ventana. Una buena taza de chocolate caliente, con algo dulce como un chocolate, siempre hacen la combinación perfecta para ese momento ¡Me encanta!</p>
                 </div>
                 <div class="cajaHobbie">
                     <img src="img/pesa.png" class="iconoHobbie" alt="pesa de entrenamiento">
-                    <p class="resumen">Me gusta entrenar, sobre todo los entrenamientos de fuerza, pero también me gusta salir a correr, porque me despeja.</p>
+                    <p class="resumen">Entrenar, sobre todo los entrenamientos de fuerza, pero también me gusta salir a correr, porque me despeja.</p>
                 </div>
             </div>
         </section>
