cambiando el icono de JS

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <p class="nombreIcono lead">SASS</p>
                     </div>    
                     <div>
-                        <img src="img/img-js.jpeg" class="iconoSkill" alt="logo de JavaScript">
+                        <img src="img/js.png" class="iconoSkill" alt="logo de JavaScript">
                         <p class="nombreIcono lead">JavaScript</p>
                     </div>    
                     <div>
