portafolio terminado, pendiente solo el funcionamiento de email del form

--- a/index.html
+++ b/index.html
@@ -141,50 +141,50 @@
             <div class="container">
                 <h3 class="subtitulo">Technical skills:</h3>
                 <div class="cajaSkills mb-5">
-                    <div>
+                    <div class="m-2">
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
                         <img src="img/icons8-figma.svg" class="iconoSkill" alt="logo de Figma">
                         <p class="nombreIcono lead">Figma</p>
                     </div>    
-                    <div>
+                    <div class="m-2">
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
                         <img src="img/icons8-trello.svg" class="iconoSkill" alt="logo de Trello">
                         <p class="nombreIcono lead">Trello</p>
                     </div>    
-                    <div>
+                    <div class="m-2">
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
                         <img src="img/git-alt-brands.svg" class="iconoSkill" alt="logo de Git">
                         <p class="nombreIcono lead">Git</p>
                     </div>    
-                    <div>
+                    <div class="m-2">
                         <img src="img/github-brands.svg" class="iconoSkill" alt="logo de GitHub">
                         <p class="nombreIcono lead">GitHub</p>
                     </div>    
-                    <div>
+                    <div class="m-2">
                         <img src="img/HTML5.svg" class="iconoSkill" alt="logo de HTML5">
                         <p class="nombreIcono lead">HTML5</p>
                     </div>    
-                    <div>
+                    <div class="m-2">
                         <img src="img/css3.svg" class="iconoSkill" alt="logo de CSS3">
                         <p class="nombreIcono lead">CSS3</p>
                     </div>    
-                    <div>
+                    <div class="m-2">
                         <img src="img/icons8-bootstrap.png" class="iconoSkill" alt="logo de Bootstrap">
                         <p class="nombreIcono lead">Bootstrap</p>
                     </div>    
-                    <div>
+                    <div class="m-2">
                         <img src="img/sass.svg" class="iconoSkill" alt="logo de SASS">
                         <p class="nombreIcono lead">SASS</p>
                     </div>    
-                    <div>
+                    <div class="m-2">
                         <img src="img/js.png" class="iconoSkill" alt="logo de JavaScript">
                         <p class="nombreIcono lead">JavaScript</p>
                     </div>    
-                    <div>
+                    <div class="m-2">
                         <img src="img/react.svg" class="iconoSkill" alt="logo de React">
                         <p class="nombreIcono lead">React</p>
                     </div>    
-                    <div>
+                    <div class="m-2">
                         <img src="img/firebase.svg" class="iconoSkill" alt="logo de Firebase">
                         <p class="nombreIcono lead">Firebase</p>
                     </div>    
