cambiando el min-height del footer en tamaño desktop

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                 <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
                         src="./img/linkedin.svg" alt="Imagen del icono de linkedIn" class="icono"></a>
             </div> -->
-            <h4 class="footerInfo mb-2">&copy;2022 Desarrollado por Nahuel-DevOne</h4>
+            <h4 class="footerInfo">&copy;2022 Desarrollado por Nahuel-DevOne</h4>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
