limpiando código sin usar del css

--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
                             <a class="nav-link m-2 hoverMenu" href="#">Home</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link m-2 hoverMenu" href="#sobre">Sobre mí</a>
+                            <a class="nav-link m-2 menu" href="#sobre">Sobre mí</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-2 hoverMenu" href="#skills">Skills</a>
+                            <a class="nav-link m-2 menu" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-2 hoverMenu" href="#formacion">Formación</a>
+                            <a class="nav-link m-2 menu" href="#formacion">Formación</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-2 hoverMenu" href="#trabajos">Proyectos</a>
+                            <a class="nav-link m-2 menu" href="#trabajos">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-2 hoverMenu" href="#contact">Contacto</a>
+                            <a class="nav-link m-2 menu" href="#contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
