borrando el archivo all.js y cambiando el nombre del archivo main.js a index.js

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     <!-- Ahorcado, proyecto que forma parte de los challenges del programa ONE, de Oracle + Alura LATAM -->
                     <article class="proyecto trans">
                         <a href="https://nahuel-devone.github.io/ahorcado-js/" target="_blank">
-                            <img src="./img/rope.png" alt="imagen de la aplicación del encriptador" class="img">
+                            <img src="./img/rope.png" alt="imagen de la aplicación del ahorcado" class="img">
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Ahorcado</p>
@@ -423,7 +423,7 @@
                     <!-- Ecommerce desarrollado con React, como desafío y proyecto del curso de React de Coderhouse -->
                     <article class="proyecto trans">
                         <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
-                            <img src="./img/img-react-2.png" alt="" class="img">
+                            <img src="./img/img-react-2.png" alt="imagen del logo de React" class="img">
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Ecommerce</p>
@@ -441,7 +441,7 @@
                     <!-- App de pacientes, desarrollada durante el curso de introducción a JavaScript en el programa ONE por el profesor, para enseñar este lenguaje -->
                     <!-- Tiene mi toque personal en cuanto a maquetación, por lo que difiere del original -->
                     <article class="proyecto trans">
-                        <a href="#" target="_blank"><img src="img/img-appPacientes.png" alt="" class="img"></a>
+                        <a href="#" target="_blank"><img src="img/img-appPacientes.png" alt="imagen de la app de pacientes" class="img"></a>
                         <div class="info">
                             <p class="fs-4 m-0">App de pacientes</p>
                             <p class="fs-4 mt-3 lead">Del Programa ONE (pronto)</p>
@@ -458,7 +458,7 @@
                     <!-- Carrito de compras, proyecto realizado con JS, para practicar una funcionalidad muy solicitada en el desarrollo Front-end -->
                     <article class="proyecto trans">
                         <a href="#" target="_blank">
-                            <img src="./img/img-carritoDeCompras.jpg" alt="" class="img">
+                            <img src="./img/img-carritoDeCompras.jpg" alt="imagen de un carrito de compras" class="img">
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Carrito de compras</p>
@@ -544,7 +544,6 @@
     </footer>
     <!-- Acá termina el pie de página -->
 
-    <script src="assets/js/all.js"></script>
     <!-- Enlace a JavaScript local -->
     <script src="./assets/js/main.js"></script>
     <!-- Enlace a JavaScript de bootstrap local -->
