--- a/index.html
+++ b/index.html
@@ -494,21 +494,21 @@
                     <div class="form-group col-md-6">
                         <label for="first_name"></label>
                         <input id="first_name" name="first_name" type="text" class="form-control"
-                            placeholder="Tu nombre o empresa" required>
+                            placeholder="Tu nombre o empresa" required maxlength="50">
                     </div>
                     <div class="form-group col-md-6 mb-3">
                         <label for="email"></label>
-                        <input id="email" type="email" class="form-control" placeholder="Tu email" required>
+                        <input id="email" type="email" class="form-control" placeholder="texto@texto.com" required maxlength="50">
                     </div>
                 </div>
                 <div class="form-group col-md-12 mb-3">
-                    <label for="email"></label>
-                    <input id="email" type="email" class="form-control" placeholder="Asunto" required>
+                    <label for="asunto"></label>
+                    <input id="asunto" type="text" class="form-control" placeholder="Asunto" required maxlength="50">
                 </div>
                 <div class="col-md-12 text-white">
-                    <label for="exampleFormControlTextarea1" class="form-label m-2 text-body fs-5">Escribe tu
+                    <label for="textAreaFormulario" class="form-label m-2 text-body fs-5">Escribe tu
                         mensaje aquí:</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                    <textarea class="form-control" id="textAreaForm" rows="5" required maxlength="300"></textarea>
                 </div>
                 <!-- <div class="col-12 m-2 mt-3">
                     <div class="form-check text-white">
