sacando el logo Just Be Nice

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <p class="m-0">Nahuel</p>
                             <p class="m-0">DevOne</p>
                         </a>
-                        <span class="justBeNice desplazamiento">#</span>
+                        <!-- <span class="justBeNice desplazamiento">#</span> -->
                     </div>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
