--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Acá empieza la cabecera -->
     <header>
         <!-- Acá empieza el nav -->
-        <nav id="nav" class="navbar navbar-expand-lg navbar-light fs-5 border-bottom">
+        <nav id="nav" class="navbar navbar-expand-lg navbar-dark fs-5 border-bottom">
             <div class="container-fluid">
                 <div class="column">
                     <div class="logo">
@@ -45,23 +45,20 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto fs-4 m-1 me-5">
-                        <!-- <li class="nav-item">
-                            <a class="nav-link m-2 hoverMenu" href="#">Home</a>
-                        </li> -->
                         <li class="nav-item">
-                            <a class="nav-link m-2 menu" href="#sobre">Sobre mí</a>
+                            <a id="menu" class="nav-link m-2" href="#sobre">Sobre mí</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-2 menu" href="#skills">Skills</a>
+                            <a id="menu" class="nav-link m-2" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-2 menu" href="#formacion">Formación</a>
+                            <a id="menu" class="nav-link m-2" href="#formacion">Formación</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-2 menu" href="#trabajos">Proyectos</a>
+                            <a id="menu" class="nav-link m-2" href="#trabajos">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-2 menu" href="#contact">Contacto</a>
+                            <a id="menu" class="nav-link m-2" href="#contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
