documentando código y cambiando el logo de la rueda

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="container-fluid">
                 <div class="column">
                     <div class="logo">
-                        <span class="gear rodar">S</span>
+                        <!-- <span class="gear rodar">S</span> -->
+                        <img src="img/logo1.png" class="gear" alt="">
                         <a href="#" id="marcaPersonal">
                             <p class="m-0">Nahuel</p>
                             <p class="m-0">DevOne</p>
