cambiando la portada del ecommerce de React

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     <!-- Ecommerce desarrollado con React, como desafío y proyecto del curso de React de Coderhouse -->
                     <article class="proyecto trans">
                         <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
-                            <img src="./img/img-react-2.png" alt="imagen del logo de React" class="img">
+                            <img src="./img/portada-ecommerce-react.jpg" alt="imagen del logo de React" class="img">
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Ecommerce</p>
