--- a/index.html
+++ b/index.html
@@ -345,6 +345,25 @@
                             </a>
                         </div>
                     </article>
+                    <!-- Sitio web, creado en equipo como trabajo Freelance para un emprendimiento de marketing digital -->
+                    <article id="proyectoCoderhouse" class="proyecto trans">
+                        <a href="https://nahuel-devone.github.io/proyecto-web-coder/" target="_blank">
+                            <img src="./img/portada-freelance-marketing.png"
+                                alt="imagen de un grupo de 4 personas trabajando y viendo una laptop Mac" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Freelance</p>
+                            <p class="fs-4 mt-3 lead">Sitio Web</p>
+                        </div>
+                        <div class="d-flex">
+                            <a href="https://proyecto-coderhouse-smoky.vercel.app/" target="_blank">
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/proyecto-web-coder" target="_blank">
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
+                            </a>
+                        </div>
+                    </article>
                     <!-- Portafolio hecho casi en su totalidad con bootstrap, para practicar este framework -->
                     <article class="proyecto trans">
                         <a href="https://nahuel-devone.github.io/bootstrap-portafolio/" target="_blank">
