agregando el nombre del proyecto Alura Geek

--- a/index.html
+++ b/index.html
@@ -455,13 +455,12 @@
                             </a>
                         </div>
                     </article>
-                    <!-- App de pacientes, desarrollada durante el curso de introducción a JavaScript en el programa ONE por el profesor, para enseñar este lenguaje -->
-                    <!-- Tiene mi toque personal en cuanto a maquetación, por lo que difiere del original -->
+                    <!-- App de pacientes, desarrollada durante el curso de introducción a JavaScript en el programa ONE -->
                     <article class="proyecto trans">
                         <a href="#" target="_blank"><img src="img/img-appPacientes.png" alt="imagen de la app de pacientes" class="img"></a>
                         <div class="info">
                             <p class="fs-4 m-0">App de pacientes</p>
-                            <p class="fs-4 mt-3 lead">Del Programa ONE (pronto)</p>
+                            <p class="fs-4 mt-3 lead">JavaScript (pronto)</p>
                         </div>
                         <div class="d-flex">
                             <a href="#">
@@ -472,13 +471,13 @@
                             </a>
                         </div>
                     </article>
-                    <!-- Carrito de compras, proyecto realizado con JS, para practicar una funcionalidad muy solicitada en el desarrollo Front-end -->
+                    <!-- Ecommerce con HMTL5, CSS3 y JavaScript, como challenge para el programa ONE de Oracle + Alura LATAM -->
                     <article class="proyecto trans">
                         <a href="#" target="_blank">
                             <img src="./img/img-carritoDeCompras.jpg" alt="imagen de un carrito de compras" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4 m-0">Carrito de compras</p>
+                            <p class="fs-4 m-0">Alura Geek</p>
                             <p class="fs-4 mt-3 lead">JavaScript (pronto)</p>
                         </div>
                         <div class="d-flex">
