agregando el proyecto de alura-geek

--- a/index.html
+++ b/index.html
@@ -186,11 +186,15 @@
                         <img src="img/firebase.svg" class="iconoSkill" alt="logo de Firebase">
                         <p class="nombreIcono lead">Firebase</p>
                     </div>    
-                    <!-- <div>
-                        <img src="img/nodejs.svg" class="iconoSkill" alt="imagen de HTML5">
+                    <div class="m-2">
+                        <img src="img/icons8-nodejs.svg" class="iconoSkill" alt="logo de Node.js">
                         <p class="nombreIcono lead">Node.js</p>
                     </div>    
-                    <div>
+                    <div class="m-2">
+                        <img src="img/icons8-mongodb.png" class="iconoSkill" alt="logo de MongoDB">
+                        <p class="nombreIcono lead">MongoDB</p>
+                    </div>    
+                    <!-- <div>
                         <img src="img/database-solid.svg" class="iconoSkill iconoSkillDataBase" alt="imagen de HTML5">
                         <p class="nombreIcono lead">MySQL y MongoDB</p>
                     </div>     -->
@@ -437,24 +441,6 @@
                             </a>
                         </div>
                     </article>
-                    <!-- Ecommerce desarrollado con React, como desafío y proyecto del curso de React de Coderhouse -->
-                    <article class="proyecto trans">
-                        <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
-                            <img src="./img/portada-ecommerce-react.jpg" alt="imagen del logo de React" class="img">
-                        </a>
-                        <div class="info">
-                            <p class="fs-4 m-0">Ecommerce</p>
-                            <p class="fs-4 mt-3 lead">React.js</p>
-                        </div>
-                        <div class="d-flex">
-                            <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
-                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
-                            </a>
-                            <a href="https://github.com/Nahuel-DevOne/ecommerce" target="_blank">
-                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
-                            </a>
-                        </div>
-                    </article>
                     <!-- App de pacientes, desarrollada durante el curso de introducción a JavaScript en el programa ONE -->
                     <article class="proyecto trans">
                         <a href="#" target="_blank"><img src="img/img-appPacientes.png" alt="imagen de la app de pacientes" class="img"></a>
@@ -474,18 +460,36 @@
                     <!-- Ecommerce con HMTL5, CSS3 y JavaScript, como challenge para el programa ONE de Oracle + Alura LATAM -->
                     <article class="proyecto trans">
                         <a href="#" target="_blank">
-                            <img src="./img/img-carritoDeCompras.jpg" alt="imagen de un carrito de compras" class="img">
+                            <img src="./img/portada-alura-geek.png" alt="imagen de un carrito de compras" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4 m-0">Alura Geek</p>
-                            <p class="fs-4 mt-3 lead">JavaScript (pronto)</p>
+                            <p class="fs-4 m-0">Ecommerce Alura Geek</p>
+                            <p class="fs-4 mt-3 lead">HTML - CSS - JS</p>
                         </div>
                         <div class="d-flex">
-                            <a href="#">
+                            <a href="https://nahuel-devone.github.io/alura-geek/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
-                            <a href="#">
+                            <a href="https://github.com/Nahuel-DevOne/alura-geek" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver código</button>
+                            </a>
+                        </div>
+                    </article>
+                    <!-- Ecommerce desarrollado con React, como desafío y proyecto del curso de React de Coderhouse -->
+                    <article class="proyecto trans">
+                        <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
+                            <img src="./img/portada-ecommerce-react.jpg" alt="imagen del logo de React" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Ecommerce React</p>
+                            <p class="fs-4 mt-3 lead">React - Firebase</p>
+                        </div>
+                        <div class="d-flex">
+                            <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/ecommerce" target="_blank">
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
                     </article>
