--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                             <p class="fs-4 mt-3 lead">Sitio Web</p>
                         </div>
                         <div class="d-flex">
-                            <a href="https://proyecto-coderhouse-smoky.vercel.app/" target="_blank">
+                            <a href="https://nahuel-devone.github.io/proyecto-web-coder/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
                             <a href="https://github.com/Nahuel-DevOne/proyecto-web-coder" target="_blank">
