trabajando en los emails

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         <section>
             <h2 id="contact" class="titulo fs-1 mt-5">Contact</h2>
             <!-- <h3 class="text-center text-dark">My email: nahuel.developer1@gmail.com</h3> -->
-            <form name="contacto" id="enviar-email" class="container cajaFormulario bg-light mt-5 mb-5" netlify>
+            <form name="contacto" id="enviar-email" class="container cajaFormulario bg-light mt-5 mb-5" method="POST" data-netlify="true" netlify>
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label for="nombre"></label>
