--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                     </div>
                     <div class="form-group col-md-6 mb-3">
                         <label for="email"></label>
-                        <input id="email" type="email" class="form-control" placeholder="texto@texto.com" required maxlength="50">
+                        <input id="email" type="email" name="email" class="form-control" placeholder="texto@texto.com" required maxlength="50">
                     </div>
                 </div>
                 <div class="form-group col-md-12 mb-3">
@@ -528,7 +528,7 @@
                 <div class="col-md-12 text-white">
                     <label for="mensaje" class="form-label m-2 text-body fs-5">Escribe tu
                         mensaje aquí:</label>
-                    <textarea class="form-control" id="mensaje" rows="5" required maxlength="300" title="Este campo no puede estar vacío, ni tener más de 300 caracteres"></textarea>
+                    <textarea class="form-control" name="message" id="mensaje" rows="5" required maxlength="300" title="Este campo no puede estar vacío, ni tener más de 300 caracteres"></textarea>
                 </div>
                 <!-- <div class="col-12 m-2 mt-3">
                     <div class="form-check text-white">
